# i-AEON-lib

./: .gitignore  LICENSE  README.md  aeontest.py  example.py  pyproject.toml
.github/workflows/: workflow.yml
src/iaeon/: __init__.py  auth.py
src/iaeon/cli/: inventory_cmd.py  login.py
src/iaeon/inventory/: __init__.py  db.py  models.py  parser.py  searcher.py
src/iaeon/receipt/: __init__.py  client.py
